@startuml
entity Users {
  *UserId : INT <<PK>>
  *Username : VARCHAR(100) <<Unique>>
  *Email : VARCHAR(100) <<Unique>>
  *Password : VARCHAR(255)
  *Role : VARCHAR(20) = "user"
  *CreatedAt : TIMESTAMP
}

entity Games {
  *GameId : INT <<PK>>
  *IgdbId : INT <<Unique>>
  *GameTitle : VARCHAR(255)
}

entity Ratings {
  *RatingId : INT <<PK>>
  *UserId : INT <<FK>>
  *GameId : INT <<FK>>
  *Score : INT CHECK (1-10)
  *Review : VARCHAR(500)
  *CreatedAt : TIMESTAMP
}

entity GameStatus {
  *StatusId : INT <<PK>>
  *UserId : INT <<FK>>
  *GameId : INT <<FK>>
  *Status : VARCHAR(10) 
  *UpdatedAt : TIMESTAMP
}

entity Favorites {
  *FavoriteId : INT <<PK>>
  *UserId : INT <<FK>>
  *GameId : INT <<FK>>
  *AddedAt : TIMESTAMP
}

entity Recommendations {
  *RecommendationId : INT <<PK>>
  *UserId : INT <<FK>>
  *GameId : INT <<FK>>
  *IgdbId : INT
  *GameTitle : VARCHAR(255)
  *Reason : TEXT
  *CreatedAt : TIMESTAMP
}

Users ||--|{ Ratings : "califica"
Users ||--|{ GameStatuses : "juega"
Users ||--|{ Favorites : "tiene"
Users ||--|{ Recommendations : "recibe"
Games ||--|{ Ratings : "recibe"
Games ||--|{ GameStatuses : "estado"
Games ||--|{ Favorites : "favorito"
Games ||--|{ Recommendations : "recomendado"

@enduml
